--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iotacss-grid",
-  "version": "0.1.6",
+  "name": "iotacss-objs-grid",
+  "version": "1.0.0",
   "description": "Grid object for iotaCSS",
   "main": "_objects.grid.scss",
   "repository": {
@@ -10,11 +10,9 @@
   "keywords": [
     "iotacss",
     "css",
+    "sass",
     "bem",
     "oocss"
   ],
-  "dependencies": {
-    "iotacss-default": "^0.1.1"
-  },
   "author": "Dimitris Psaropoulos <info@harby.me>"
 }
